# cargo-brief

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
ai-docs/: mental-model.md
ai-docs/projects/: 260305-1600-phase1-core.md  260308-2240-visibility-and-rendering.md
notes/ai-docs/: _index.md
notes/ai-docs/mental-model/: cli.md  glob-expansion.md  index.md  model.md  overview.md  remote-pipeline.md  remote.md  render.md  resolve.md  rustdoc_json.md  target-resolution.md  testing.md  visibility.md
notes/ai-docs/tickets/done/: 260308-visibility-and-rendering.md  260310-remote-crate-support.md
notes/ai-docs/tickets/todo/: 260310-remote-crate-support.md  260314-glob-reexport-expansion.md
notes/ai-docs/tickets/wip/: 260308-visibility-and-rendering.md
src/: cli.rs  lib.rs  main.rs  model.rs  remote.rs  render.rs  resolve.rs  rustdoc_json.rs
test_fixture/: Cargo.toml
test_fixture/src/: lib.rs
test_workspace/: Cargo.toml
test_workspace/app/: Cargo.toml
test_workspace/app/src/: lib.rs
test_workspace/core-lib/: Cargo.toml
test_workspace/core-lib/src/: lib.rs  utils.rs
tests/: cli_smoke.rs  external_crate_integration.rs  facade_crate_integration.rs  integration.rs  remote_crate_integration.rs  subprocess_integration.rs  workspace_integration.rs
