[package]
name = "cargo-brief"
version = "0.2.1"
edition = "2024"
description = "Visibility-aware Rust API extractor — pseudo-Rust output for AI agent consumption"
license = "MPL-2.0"
repository = "https://github.com/kang-sw/cargo-brief"
keywords = ["cargo", "rustdoc", "api", "cli"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rustdoc-types = "0.57"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
